force-app/main/default/objects/Case/fields/Case_Contains_PII__c.field-meta.xml
<CustomField>
    <fullName>Case_Contains_PII__c</fullName>
    <label>Case Contains PII</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>