force-app/main/default/objects/Case/fields/Case_First_Accepted_Date__c.field-meta.xml
<CustomField>
    <fullName>Case_First_Accepted_Date__c</fullName>
    <description>The time and date the case is first accepted by a Salesforce Admin</description>
    <inlineHelpText>The time and date the case is first accepted by a Salesforce Admin</inlineHelpText>
    <label>Case First Accepted Date</label>
    <type>DateTime</type>
</CustomField>