force-app/main/default/objects/Case/fields/Case_Flag_First_touch__c.field-meta.xml
<CustomField>
    <fullName>Case_Flag_First_touch__c</fullName>
    <description>Date/Time field to capture when the first communication (via Email) was sent from case</description>
    <label>Case Flag First touch</label>
    <type>DateTime</type>
</CustomField>