force-app/main/default/objects/Case/fields/Case_Not_Closed_On_Time__c.field-meta.xml
<CustomField>
    <fullName>Case_Not_Closed_On_Time__c</fullName>
    <formula>AND(
IsClosed ,

DATEVALUE(ClosedDate ) &gt; Project_Due_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Not Closed On-Time</label>
    <type>Checkbox</type>
</CustomField>