force-app/main/default/objects/Case/fields/Case_Owner_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_Full_Name__c</fullName>
    <formula>Owner:User.Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Owner Full Name</label>
    <type>Text</type>
</CustomField>