force-app/main/default/objects/Case/fields/Case_Re_Opened__c.field-meta.xml
<CustomField>
    <fullName>Case_Re_Opened__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case Re-Opened</label>
    <type>Checkbox</type>
</CustomField>