force-app/main/default/objects/Case/fields/Case_Record_Count__c.field-meta.xml
<CustomField>
    <fullName>Case_Record_Count__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Record Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>