force-app/main/default/objects/Case/fields/Case_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Case_Resolution__c</fullName>
    <description>Finance field to explain resolution of the case when it is closed.</description>
    <label>Case Resolution</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>