force-app/main/default/objects/Case/fields/Case_Review__c.field-meta.xml
<CustomField>
    <fullName>Case_Review__c</fullName>
    <inlineHelpText>Check to flag this case for review.</inlineHelpText>
    <label>Case Review</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Documentation</fullName>
            </value>
            <value>
                <fullName>Tool Needed</fullName>
            </value>
            <value>
                <fullName>Manager Review</fullName>
            </value>
            <value>
                <fullName>Process Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>