force-app/main/default/objects/Case/fields/Case_Sort_Weight__c.field-meta.xml
<CustomField>
    <fullName>Case_Sort_Weight__c</fullName>
    <formula>100 * (
  IF(ISPICKVAL(Priority,&quot;High&quot;), (NOW() - CreatedDate) * 3, 0) +
  IF(ISPICKVAL(Priority,&quot;Medium&quot;), (NOW() - CreatedDate) * 2, 0) +
  IF(ISPICKVAL(Priority,&quot;Low&quot;), (NOW() - CreatedDate) * 1, 0) +
  IF(ISPICKVAL(Priority,&quot;None&quot;), (NOW() - CreatedDate) * 0.5, 0) +
  IF(AND((NOW() - CreatedDate)&gt;0.5, ISPICKVAL(Priority,&quot;High&quot;)),5,0) +
  IF(AND((NOW() - CreatedDate)&gt;1, ISPICKVAL(Priority,&quot;Medium&quot;)),5,0) +
  IF(AND((NOW() - CreatedDate)&gt;2, ISPICKVAL(Priority,&quot;Low&quot;)),5,0) +
  IF(AND((NOW() - CreatedDate)&gt;2, ISPICKVAL(Priority,&quot;None&quot;)),5,0)
) *
IF(ISPICKVAL(Product__c, &quot;Merchant&quot;), 1.25, 1) *
IF(ISPICKVAL(Product__c, &quot;SearchAdvisor&quot;), 1.5, 1) *
IF(ISPICKVAL(Product__c, &quot;ShoppingAdvisor&quot;), 1.5, 1) *
IF(ISPICKVAL(Origin, &quot;SSC&quot;), 1.25, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sort Weight - not in use</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>