force-app/main/default/objects/Case/fields/Case_Sub_Classification__c.field-meta.xml
<CustomField>
    <fullName>Case_Sub_Classification__c</fullName>
    <label>Case Sub-Classification</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Case_Classification__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Financial</fullName>
            </value>
            <value>
                <fullName>Listings</fullName>
            </value>
            <value>
                <fullName>Orders</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
            <value>
                <fullName>Buy Box</fullName>
            </value>
            <value>
                <fullName>Data Import</fullName>
            </value>
            <value>
                <fullName>Order/Fulfillment Testing</fullName>
            </value>
            <value>
                <fullName>Refunds/Cancellation Testing</fullName>
            </value>
            <value>
                <fullName>EMEA Strat MS OOO</fullName>
            </value>
            <value>
                <fullName>EMEA Ent MS OOO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>