force-app/main/default/objects/Case/fields/Case_Tag_Field__c.field-meta.xml
<CustomField>
    <fullName>Case_Tag_Field__c</fullName>
    <description>Syncs to the JIRA Labels Field for PM Ideas Case types. The Labels must be space separated to make them compatible with the way Labels are entered in JIRA. Ex (Label1 Label2). The Labels themselves should not have any spaces (hyphens are allowed)</description>
    <inlineHelpText>Syncs to the JIRA Labels Field for PM Ideas Case types. The Labels must be space separated to make them compatible with the way Labels are entered in JIRA. Ex (Label1 Label2). The Labels themselves should not have any spaces (hyphens are allowed)</inlineHelpText>
    <label>Labels</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>