force-app/main/default/objects/Case/fields/Case_Task_Duration_hours__c.field-meta.xml
<CustomField>
    <fullName>Case_Task_Duration_hours__c</fullName>
    <label>Case Task Duration (hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>