force-app/main/default/objects/Case/fields/Case_Thread_Id__c.field-meta.xml
<CustomField>
    <fullName>Case_Thread_Id__c</fullName>
    <formula>/*&quot;ref:!&quot;
 &amp; MID( $Organization.Id , 1, 6)
 &amp; MID( $Organization.Id , 12, 4)
 &amp; &quot;.!&quot;
 &amp; MID( Id , 1, 5)
 &amp; MID( Id , 9, 7)
 &amp; &quot;:ref&quot;*/


&quot;ref:!&quot; 
&amp; MID($Organization.Id, 1, 5) 
&amp; MID($Organization.Id, 10, 6) 
&amp; &quot;.!&quot; 
&amp; MID(Id, 1, 5) 
&amp; MID(Id, 9, 7) 
&amp; &quot;:ref&quot;</formula>
    <label>Case Thread Id</label>
    <type>Text</type>
</CustomField>