force-app/main/default/objects/Case/fields/Case_Topic__c.field-meta.xml
<CustomField>
    <fullName>Case_Topic__c</fullName>
    <description>For WTB support. Selection for what the case was about.</description>
    <label>Case Topic</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Data</fullName>
            </value>
            <value>
                <fullName>Mapping</fullName>
            </value>
            <value>
                <fullName>Non-Issue</fullName>
            </value>
            <value>
                <fullName>Product Related</fullName>
            </value>
            <value>
                <fullName>Reporting Dashboard</fullName>
            </value>
            <value>
                <fullName>Report Send Out</fullName>
            </value>
            <value>
                <fullName>Retailer</fullName>
            </value>
            <value>
                <fullName>Scrape</fullName>
            </value>
            <value>
                <fullName>Widget</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>