force-app/main/default/objects/Case/fields/Categories__c.field-meta.xml
<CustomField>
    <fullName>Categories__c</fullName>
    <description>Used by sales engineering.</description>
    <label>Categories</label>
    <type>TextArea</type>
</CustomField>