force-app/main/default/objects/Case/fields/Category_dsco__c.field-meta.xml
<CustomField>
    <fullName>Category_dsco__c</fullName>
    <description>Created as part of Zendesk to SF migration</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account administration</fullName>
            </value>
            <value>
                <fullName>Configuration</fullName>
            </value>
            <value>
                <fullName>Orders</fullName>
            </value>
            <value>
                <fullName>Platform</fullName>
            </value>
            <value>
                <fullName>Products/Inventory</fullName>
            </value>
            <value>
                <fullName>Reporting</fullName>
            </value>
            <value>
                <fullName>Transfer</fullName>
            </value>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>Reset onboarding</fullName>
            </value>
            <value>
                <fullName>Delivery Suite</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>