force-app/main/default/objects/Case/fields/Category_PL__c.field-meta.xml
<CustomField>
    <fullName>Category_PL__c</fullName>
    <description>Category Picklist values for CSM Escalation Support</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Billing Escalation</fullName>
            </value>
            <value>
                <fullName>Channel Expansion</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Out of Cycle Pricing Change</fullName>
            </value>
            <value>
                <fullName>Out of Cycle Termination</fullName>
            </value>
            <value>
                <fullName>Risk/Credit/Dissatisfied Customer</fullName>
            </value>
            <value>
                <fullName>Support Escalation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>