force-app/main/default/objects/Case/fields/Change_Level__c.field-meta.xml
<CustomField>
    <fullName>Change_Level__c</fullName>
    <label>Change Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Account Merge</fullName>
            </value>
            <value>
                <fullName>Additional Product Request</fullName>
            </value>
            <value>
                <fullName>Apex</fullName>
            </value>
            <value>
                <fullName>Approval Process - Locked Contract Change Request</fullName>
            </value>
            <value>
                <fullName>Approval Process - Update Approval Process, Approver, or Step</fullName>
            </value>
            <value>
                <fullName>Code Change</fullName>
            </value>
            <value>
                <fullName>Data Clean-up / Update</fullName>
            </value>
            <value>
                <fullName>DemandTools Request</fullName>
            </value>
            <value>
                <fullName>Error Investigation</fullName>
            </value>
            <value>
                <fullName>Field / Validation Rule Creation / Adjustment</fullName>
            </value>
            <value>
                <fullName>GDPR Request</fullName>
            </value>
            <value>
                <fullName>Lead Routing Update</fullName>
            </value>
            <value>
                <fullName>License Change Request</fullName>
            </value>
            <value>
                <fullName>List Uploads</fullName>
            </value>
            <value>
                <fullName>Live Agent / Live Chat</fullName>
            </value>
            <value>
                <fullName>Managed Quotes</fullName>
            </value>
            <value>
                <fullName>Marketo</fullName>
            </value>
            <value>
                <fullName>MIS Request</fullName>
            </value>
            <value>
                <fullName>New User Request</fullName>
            </value>
            <value>
                <fullName>Opportunity Bookings Question / Issue</fullName>
            </value>
            <value>
                <fullName>Opportunity Verification</fullName>
            </value>
            <value>
                <fullName>Ops Report - Processing Pricing Change Amendments</fullName>
            </value>
            <value>
                <fullName>Ops Report - Processing Service Level Changes</fullName>
            </value>
            <value>
                <fullName>Ops Report - Processing Terminations</fullName>
            </value>
            <value>
                <fullName>Org Change Request</fullName>
            </value>
            <value>
                <fullName>Permissions Change Request</fullName>
            </value>
            <value>
                <fullName>Permissions Issue</fullName>
            </value>
            <value>
                <fullName>Potential Project</fullName>
            </value>
            <value>
                <fullName>Process Change Request</fullName>
            </value>
            <value>
                <fullName>Project Creation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>