force-app/main/default/objects/Case/fields/Change_Made_to_Risk__c.field-meta.xml
<CustomField>
    <fullName>Change_Made_to_Risk__c</fullName>
    <label>Change Made to Risk</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>