force-app/main/default/objects/Case/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <inlineHelpText>for error resolution KPI Tracking</inlineHelpText>
    <label>Channel</label>
    <type>TextArea</type>
</CustomField>