force-app/main/default/objects/Case/fields/Channel_Detail__c.field-meta.xml
<CustomField>
    <fullName>Channel_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Channel Detail</label>
    <referenceTo>Channel_Detail__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>