force-app/main/default/objects/Case/fields/Channel_IDs_Launching_with_Services__c.field-meta.xml
<CustomField>
    <fullName>Channel_IDs_Launching_with_Services__c</fullName>
    <label>Channel IDs Launching with Services:</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>