force-app/main/default/objects/Case/fields/Channels_For_Consideration__c.field-meta.xml
<CustomField>
    <fullName>Channels_For_Consideration__c</fullName>
    <description>Used for the Sales Engineer Request case type</description>
    <label>Channels For Consideration</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>