force-app/main/default/objects/Case/fields/Client_Success_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Client_Success_Engineer__c</fullName>
    <formula>Account.Implementation_Contact__r.Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Success Engineer</label>
    <type>Text</type>
</CustomField>