force-app/main/default/objects/Case/fields/Close_Case_QuickAction__c.field-meta.xml
<CustomField>
    <fullName>Close_Case_QuickAction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Close Case QuickAction</label>
    <type>Checkbox</type>
</CustomField>