force-app/main/default/objects/Case/fields/Close_Status__c.field-meta.xml
<CustomField>
    <fullName>Close_Status__c</fullName>
    <label>Close Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Closed - Resolved</fullName>
            </value>
            <value>
                <fullName>Closed by Customer</fullName>
            </value>
            <value>
                <fullName>Closed - Answered on Forum</fullName>
            </value>
            <value>
                <fullName>Closed - Junk/Spam</fullName>
            </value>
            <value>
                <fullName>Closed - Duplicate</fullName>
            </value>
            <value>
                <fullName>Closed- Sales Team Referral</fullName>
            </value>
            <value>
                <fullName>Closed- Termination/Grievance</fullName>
            </value>
            <value>
                <fullName>Enhancement Request Submitted</fullName>
            </value>
            <value>
                <fullName>Archived</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>