force-app/main/default/objects/Case/fields/Closed_Junk_Spam__c.field-meta.xml
<CustomField>
    <fullName>Closed_Junk_Spam__c</fullName>
    <defaultValue>false</defaultValue>
    <description>checkbox to request case to be closed a Junk/Spam with default required field selection</description>
    <label>Closed Junk/Spam</label>
    <type>Checkbox</type>
</CustomField>