force-app/main/default/objects/Case/fields/Closed_Same_Day__c.field-meta.xml
<CustomField>
    <fullName>Closed_Same_Day__c</fullName>
    <formula>If (DATEVALUE(CreatedDate) =  DATEVALUE( ClosedDate ),1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closed Same Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>