force-app/main/default/objects/Case/fields/Comment_Count__c.field-meta.xml
<CustomField>
    <fullName>Comment_Count__c</fullName>
    <description>Count of customer comments on a case submitted through the community.</description>
    <label>Comment Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>