force-app/main/default/objects/Case/fields/Communicate_Resolution_with_Customer__c.field-meta.xml
<CustomField>
    <fullName>Communicate_Resolution_with_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For finance cases.</description>
    <inlineHelpText>Would you like the resolution communicated directly to the customer?</inlineHelpText>
    <label>Communicate Resolution with Customer?</label>
    <type>Checkbox</type>
</CustomField>