force-app/main/default/objects/Case/fields/Communication__c.field-meta.xml
<CustomField>
    <fullName>Communication__c</fullName>
    <inlineHelpText>This area should be used to describe any enhancement, what business unit will own maintaining this enhancement, how it should be used etc.  This will be emailed out in a report format to all salesforce.com users each week.</inlineHelpText>
    <label>Communication</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>