force-app/main/default/objects/Case/fields/Communication_Distributed__c.field-meta.xml
<CustomField>
    <fullName>Communication_Distributed__c</fullName>
    <label>Communication Distributed</label>
    <type>Date</type>
</CustomField>