force-app/main/default/objects/Case/fields/Communication_to_MIS__c.field-meta.xml
<CustomField>
    <fullName>Communication_to_MIS__c</fullName>
    <label>Communication to MIS</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>