force-app/main/default/objects/Case/fields/Component__c.field-meta.xml
<CustomField>
    <fullName>Component__c</fullName>
    <label>Component</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Account Information</fullName>
            </value>
            <value>
                <fullName>Actionable Reporting</fullName>
            </value>
            <value>
                <fullName>Ad Copy</fullName>
            </value>
            <value>
                <fullName>Ad Creation</fullName>
            </value>
            <value>
                <fullName>Ad Design/Changes</fullName>
            </value>
            <value>
                <fullName>Adeo</fullName>
            </value>
            <value>
                <fullName>Ad Groups</fullName>
            </value>
            <value>
                <fullName>Admin Service</fullName>
            </value>
            <value>
                <fullName>Ads</fullName>
            </value>
            <value>
                <fullName>Ad Template</fullName>
            </value>
            <value>
                <fullName>Advanced Filters</fullName>
            </value>
            <value>
                <fullName>Alerts</fullName>
            </value>
            <value>
                <fullName>AliExpress</fullName>
            </value>
            <value>
                <fullName>AllYouNeed</fullName>
            </value>
            <value>
                <fullName>Amazon</fullName>
            </value>
            <value>
                <fullName>Amazon/Rakuten</fullName>
            </value>
            <value>
                <fullName>Amazon Drop Ship</fullName>
            </value>
            <value>
                <fullName>Amazon Settings</fullName>
            </value>
            <value>
                <fullName>Amazon Sponsored Products</fullName>
            </value>
            <value>
                <fullName>Amazon Vendor</fullName>
            </value>
            <value>
                <fullName>Amazon Vendor Content</fullName>
            </value>
            <value>
                <fullName>Amazon Webstore</fullName>
            </value>
            <value>
                <fullName>Analysis/Strategy</fullName>
            </value>
            <value>
                <fullName>API</fullName>
            </value>
            <value>
                <fullName>Application Unavailable</fullName>
            </value>
            <value>
                <fullName>Attributes &amp; Labels</fullName>
            </value>
            <value>
                <fullName>Auction Listing Maintenance</fullName>
            </value>
            <value>
                <fullName>Base URL Updates</fullName>
            </value>
            <value>
                <fullName>Benchmarking Reports</fullName>
            </value>
            <value>
                <fullName>Best Buy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>