force-app/main/default/objects/Case/fields/Configuration_Check__c.field-meta.xml
<CustomField>
    <fullName>Configuration_Check__c</fullName>
    <label>Configuration Check</label>
    <type>Date</type>
</CustomField>