force-app/main/default/objects/Case/fields/Contact_Email_OrderStream__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email_OrderStream__c</fullName>
    <description>OrderStream Contact Email</description>
    <label>Contact Email (OrderStream)</label>
    <type>Email</type>
</CustomField>