force-app/main/default/objects/Case/fields/Contact_Name_OrderStream__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name_OrderStream__c</fullName>
    <description>Contact Name for OrderStream product</description>
    <label>Contact Name (OrderStream)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>