force-app/main/default/objects/Case/fields/Contact_Phone_OrderStream__c.field-meta.xml
<CustomField>
    <fullName>Contact_Phone_OrderStream__c</fullName>
    <description>Contact Phone for OrderStream products</description>
    <label>Contact Phone (OrderStream)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>