force-app/main/default/objects/Case/fields/Contact_Phone_SCON__c.field-meta.xml
<CustomField>
    <fullName>Contact_Phone_SCON__c</fullName>
    <description>SCON Onboarding Primary Contact Phone number</description>
    <label>Contact Phone (SCON)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>