force-app/main/default/objects/Case/fields/Contains_Payment_Information__c.field-meta.xml
<CustomField>
    <fullName>Contains_Payment_Information__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contains Payment Information</label>
    <type>Checkbox</type>
</CustomField>