force-app/main/default/objects/Case/fields/Contains_PII__c.field-meta.xml
<CustomField>
    <fullName>Contains_PII__c</fullName>
    <label>Contains PII</label>
    <type>Picklist</type>
    <description>Used by the Brands team to indicate when a Case contains PII and needs to be addressed by a manager. When this is marked as &quot;Yes&quot; the &quot;PII Info&quot; field is required via a validation rule.</description>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>