force-app/main/default/objects/Case/fields/Content_Type__c.field-meta.xml
<CustomField>
    <fullName>Content_Type__c</fullName>
    <label>Content Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Article</fullName>
                <default>true</default>
                <label>Article</label>
            </value>
            <value>
                <fullName>Video</fullName>
            </value>
            <value>
                <fullName>FAQ</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
            <value>
                <fullName>Newsletter</fullName>
            </value>
            <value>
                <fullName>Release Notes</fullName>
            </value>
            <value>
                <fullName>Learning Module</fullName>
            </value>
            <value>
                <fullName>Internal Document</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>