force-app/main/default/objects/Case/fields/Contract_Accepted_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Accepted_Date__c</fullName>
    <description>Contract Accepted Date used on SCON Onboarding Cases</description>
    <label>Terms of Contract Accepted Date</label>
    <type>DateTime</type>
</CustomField>